# sqldeps-webapp

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
